data/derived/fa15/progs/unify/prog3038.ml.out
Characters 74-76:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a -> int
       but an expression was expected of type 'a list
